--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,7 @@ subjects:
 - !lcsh 'Germany -- History -- 1871-1918 -- Caricatures and cartoons'
 - !lcc 'DD'
 - !lcsh 'William II, German Emperor, 1859-1941 -- Caricatures and cartoons'
+- GITenberg
 title: 'Supplement to Punch, or the London Charivari, September 16, 1914
 
   The New Rake''s Progress: Cartoons from "Punch" Illustrating the Kaiser''s Career,
